--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -7,5 +7,7 @@
   "block.tutorialmod.zircon_ore": "Zircon Ore",
   "block.tutorialmod.deepslate_zircon_ore": "Deepslate Zircon Ore",
 
+  "block.tutorialmod.jumpy_block": "Jumpy Block",
+
   "itemGroup.tutorialtab": "Tutorial Tab"
 }
