--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.tutorialmod.deepslate_zircon_ore": "Deepslate Zircon Ore",
 
   "block.tutorialmod.jumpy_block": "Jumpy Block",
+  "block.tutorialmod.zircon_lamp": "Zircon Lamp",
 
   "itemGroup.tutorialtab": "Tutorial Tab"
 }
