--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.tutorialmod.zircon": "Zircon",
   "item.tutorialmod.raw_zircon": "Raw Zircon",
   "item.tutorialmod.eight_ball": "Eight Ball",
+  "item.tutorialmod.soap_water_bucket": "Soap Water Bucket",
 
   "block.tutorialmod.zircon_block": "Zircon Block",
   "block.tutorialmod.zircon_ore": "Zircon Ore",
