custom block model (voxel)

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -11,6 +11,8 @@
   "block.tutorialmod.jumpy_block": "Jumpy Block",
   "block.tutorialmod.zircon_lamp": "Zircon Lamp",
 
+  "block.tutorialmod.gem_infusing_station": "Gem Infusing Station",
+
   "itemGroup.tutorialtab": "Tutorial Tab",
 
   "key.category.tutorialmod.tutorial": "Tutorial Mod",
